# NanoCamelid-Nes

./: .gitignore  LICENSE
.github/workflows/: gate.yml
docs/nano_nes/: README.md  corpus.txt  questions.txt  random_questions.txt  routes.txt  topics.txt
docs/nano_nes/eval/: known_questions.txt  nearby_questions.txt  nonsense.txt  technical_questions.txt
docs/nano_nes/receipts/: fceux_receipt_q1.json  fceux_receipt_q2.json  fceux_receipt_q3.json  gauntlet_known_questions.json  gauntlet_nearby_questions.json  gauntlet_nonsense.json  gauntlet_random_questions.json  gauntlet_receipt.json  gauntlet_technical_questions.json  model_receipt.json  parity_receipt_q1.json  parity_receipt_q2.json  parity_receipt_q3.json
scripts/: nano_nes_chat.sh  nano_nes_fceux_check.sh  nano_nes_gauntlet.sh  nano_nes_verify.sh
tools/nano_nes_model_builder/: Cargo.toml
tools/nano_nes_model_builder/src/: cpu6502.rs  lib.rs  nes.rs  neural.rs
tools/nano_nes_model_builder/tests/: keyboard.rs
tools/nano_nes_rom/: nes.cfg
tools/nano_nes_rom/src/: nanocamelid.s
tools/nano_nes_rom/test/: fceux_probe.lua
