[package]
name = "nano_nes_model_builder"
version = "0.1.0"
edition = "2021"
description = "NanoCamelid NES: host-side trigram model builder, reference generator, and emulator parity verifier"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
libc = "0.2"

[[bin]]
name = "build_model"
path = "src/bin/build_model.rs"

[[bin]]
name = "refgen"
path = "src/bin/refgen.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "play"
path = "src/bin/play.rs"

[[bin]]
name = "gauntlet"
path = "src/bin/gauntlet.rs"
